# BookMarks

./: .buildconfig  meson.build  org.byteheathen.BookMarks.json
data/: meson.build  org.byteheathen.BookMarks.appdata.xml.in  org.byteheathen.BookMarks.desktop.in  org.byteheathen.BookMarks.gschema.xml
po/: POTFILES  meson.build
src/: bookmarks.gresource.xml  bookmarks.in  main.py  meson.build  window.py
src/pages/: BookMarks.py  Folders.py  Tags.py
src/styles/: bookmark.css  tag.css
src/ui/: delete-bookmark.ui  delete-folder.ui  delete-tag.ui  styles.css  window.ui
src/ui/forms/: quick-create-bookmark.ui  quick-create-folder.ui  quick-create-tag.ui
src/widgets/: BookMarkCard.py  DeleteBookMark.py  DeleteFolder.py  DeleteTag.py  FlatButton.py  FolderCard.py  FolderDisplay.py  TagBadge.py  TagCard.py
src/widgets/forms/: QuickCreateBookMark.py  QuickCreateFolder.py  QuickCreateTag.py
